# patient-adminstration-system

./: .gitignore  CHANGELOG.md  README.md
patient-administration-system-frontend/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
patient-administration-system-frontend/assets/views/admissions/: new.html
patient-administration-system-frontend/assets/views/appointments/: new.html
patient-administration-system-frontend/assets/views/dashboard/: _audit.html  _outbox.html  _wards.html  index.html
patient-administration-system-frontend/assets/views/layouts/: main.html
patient-administration-system-frontend/assets/views/letters/: new.html
patient-administration-system-frontend/assets/views/patients/: index.html  show.html
patient-administration-system-frontend/assets/views/rtt/: index.html
patient-administration-system-frontend/assets/views/wards/: show.html
patient-administration-system-frontend/config/: development.yaml  production.yaml  test.yaml
patient-administration-system-frontend/src/: app.rs  csrf.rs  lib.rs  main.rs
patient-administration-system-frontend/src/controllers/: admissions.rs  appointments.rs  dashboard.rs  health.rs  letters.rs  mod.rs  patients.rs  rtt.rs  wards.rs
patient-administration-system-frontend/src/initializers/: mod.rs
patient-administration-system-frontend/src/models/: audit.rs  bed.rs  letter_template.rs  mod.rs  occupancy.rs  outbox.rs  patient.rs  rtt.rs  schedule.rs  ward.rs
patient-administration-system-frontend/src/services/: mod.rs  pas_api.rs
patient-administration-system-frontend/src/views/: mod.rs
patient-administration-system-frontend/tests/: dashboard_smoke.rs
patient-administration-system-rust-crate/: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.test  README.md  demo.sh  docker-compose.test.yml  docker-compose.yml  seed.md  spec.md
patient-administration-system-rust-crate/AGENTS/: architecture.md  index.md  interchange.md  matching.md  models.md  national-person-identifiers.md  restful.md  testing.md
patient-administration-system-rust-crate/AGENTS/share/: auditability.md  availability.md  match-search-merge.md  observability.md  overview.md  privacy.md  restful.md  technology.md
patient-administration-system-rust-crate/benches/: adt_bench.rs  scheduling_bench.rs  waitlist_bench.rs
patient-administration-system-rust-crate/examples/: README.md  fhir-bundle.json  fhir-patient.json  fhir-transaction-bundle.json  hl7-adt-a01.txt  hl7-adt-a02.txt  hl7-adt-a03.txt  hl7-adt-a28.txt  hl7-batch-adt.txt  interchange.rs  patient-single.json  patients.csv  patients.json  patients.tsv  patients.xml
patient-administration-system-rust-crate/migrations/: Cargo.toml
patient-administration-system-rust-crate/migrations/src/: lib.rs  m20260520_000001_init.rs  m20260525_000002_outbox_dlq.rs  m20260526_000003_appointment_series.rs  m20260527_000004_coverage.rs  m20260528_000005_patient_replaced_by.rs  main.rs
patient-administration-system-rust-crate/src/: error.rs  lib.rs  main.rs
patient-administration-system-rust-crate/src/adt/: mod.rs
patient-administration-system-rust-crate/src/api/: dashboard.rs  mod.rs  openapi.rs
patient-administration-system-rust-crate/src/api/fhir/: handlers.rs  mod.rs  operation_outcome.rs  resources.rs  routes.rs
patient-administration-system-rust-crate/src/api/rest/: auth.rs  handlers.rs  mod.rs  rate_limit.rs  routes.rs  state.rs
patient-administration-system-rust-crate/src/billing/: mod.rs
patient-administration-system-rust-crate/src/communication/: mod.rs  sms.rs
patient-administration-system-rust-crate/src/config/: mod.rs
patient-administration-system-rust-crate/src/db/: mod.rs
patient-administration-system-rust-crate/src/db/entities/: account.rs  admission.rs  appointment.rs  appointment_series.rs  audit_log.rs  bed.rs  bed_assignment.rs  charge.rs  consent.rs  coverage.rs  department.rs  discharge.rs  encounter.rs  facility.rs  generated_letter.rs  invoice.rs  letter_template.rs  mod.rs  outbox_dead_letter.rs  outbox_event.rs  patient.rs  payment.rs  practitioner.rs  practitioner_role.rs  referral.rs  room.rs  rtt_clock_event.rs  rtt_pathway.rs  slot.rs  (+4 more)
patient-administration-system-rust-crate/src/hl7v2/: ack.rs  batch.rs  encoder.rs  escape.rs  listener.rs  mapping.rs  mllp.rs  mod.rs  parser.rs
patient-administration-system-rust-crate/src/interchange/: csv.rs  json.rs  mod.rs  tsv.rs  xml.rs
patient-administration-system-rust-crate/src/models/: admission.rs  appointment.rs  appointment_series.rs  billing.rs  communication.rs  consent.rs  coverage.rs  encounter.rs  facility.rs  identifier.rs  mod.rs  patient.rs  practitioner.rs  rtt.rs  schedule.rs  waitlist.rs
patient-administration-system-rust-crate/src/observability/: mod.rs
patient-administration-system-rust-crate/src/privacy/: mod.rs
patient-administration-system-rust-crate/src/resources/: mod.rs
patient-administration-system-rust-crate/src/scheduling/: mod.rs  series.rs
patient-administration-system-rust-crate/src/search/: mod.rs
patient-administration-system-rust-crate/src/streaming/: dispatcher.rs  hl7v2_publisher.rs  mod.rs  webhook.rs
patient-administration-system-rust-crate/src/validation/: mod.rs
patient-administration-system-rust-crate/src/waitlist/: mod.rs
patient-administration-system-rust-crate/templates/: dashboard.html  dashboard_audit.html  dashboard_breaches.html  dashboard_outbox.html  dashboard_wards.html
patient-administration-system-rust-crate/tests/: adt_flow_test.rs  appointment_series_test.rs  auth_test.rs  billing_flow_test.rs  concurrency_test.rs  consent_flow_test.rs  coverage_flow_test.rs  dashboard_test.rs  fhir_bundle_test.rs  fhir_write_test.rs  health_test.rs  hl7v2_mllp_test.rs  hl7v2_outbound_test.rs  hl7v2_test.rs  interchange_test.rs  letter_flow_test.rs  outbox_dispatcher_test.rs  patient_crud_test.rs  patient_merge_test.rs  practitioner_test.rs  rate_limit_test.rs  scheduling_flow_test.rs  waitlist_rtt_flow_test.rs  webhook_test.rs
patient-administration-system-rust-crate/tests/common/: mod.rs
(+18 files in other folders)
