[package]
name = "patient-administration-system-frontend"
version = "0.1.0"
edition = "2024"
authors = ["joel@joelparkerhenderson.com"]
description = "Loco-rs front-end for the Patient Administration System (PAS). Tera templates + HTMX live-refresh + Lily Design System markup. Shares the PAS PostgreSQL database via sea-orm; does NOT replace the PAS Axum API server."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# Loco-rs full-stack framework. Loco brings its own pinned axum + tower +
# tower-http + tracing, so we deliberately do NOT add those crates as
# direct dependencies — doing so creates conflicting `FromRequest` impls
# from incompatible axum versions in the dep graph.
loco-rs = "0.14"

# Cookie-based CSRF token storage for the write-flow forms (`csrf` module).
# Pinned to the same minor as the `axum-extra` that Loco 0.14.1 brings via
# axum 0.8, so a single `CookieJar` type flows through every handler.
axum-extra = { version = "0.10", features = ["cookie"] }

# Async runtime. Loco re-exports tokio but pinning a matching minor here
# keeps `#[tokio::main]` ergonomic in `src/main.rs`.
tokio = { version = "1.49", features = ["full"] }

# Database — same as the PAS Axum app so the two share schemas + migrations.
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-json"] }

# Reuse the PAS migrations crate so `patient-administration-system-frontend` and the PAS Axum
# binary apply identical schemas via `loco-cli db migrate`.
migration = { path = "../patient-administration-system-rust-crate/migrations", package = "patient-administration-system-migrations" }

# Serialization.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Outbound HTTP — the front-end can also call the PAS REST API when it
# wants behavior that lives in the PAS service layer rather than read
# straight from the DB.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Utilities.
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"

[dev-dependencies]
loco-rs = { version = "0.14", features = ["testing"] }
serial_test = "3.2"

[[bin]]
name = "patient-administration-system-frontend"
path = "src/main.rs"

# [profile.release] hoisted to the workspace root.
